kubernetes/rook-ceph/ingress-mgr-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ceph-mgr-ingress
  namespace: rook-ceph
spec:
  rules:
  - host: ceph.jwt.com
    http:
       paths:
       - backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 7000
